--- a/details.html
+++ b/details.html
@@ -79,7 +79,7 @@
 <body>
 <!-- 返回按钮 -->
 <a href="javascript:void(0)" class="back-btn" id="details-back-btn" onclick="detailsBackClick()">
-    <img src="images/back-btn.png" alt="">
+    <img src="images/back1-btn.png" alt="">
 </a>
 
 <script>
