--- a/long.html
+++ b/long.html
@@ -80,7 +80,7 @@
     <div class="loading"></div>
 </div>
 
-<a href="javascript:void(0)" class="back-btn" id="back-btn" onclick="backClick()"><img src="images/back-btn.png" alt=""></a>
+<a href="javascript:void(0)" class="back-btn" id="back-btn" onclick="backClick()"><img src="images/back1-btn.png" alt=""></a>
 <script>
     function backClick() {
         let slide = $("#slide-sec", window.parent.document);
