--- a/video.html
+++ b/video.html
@@ -73,7 +73,7 @@
             <div>鲲</div>
         </div>
         <div class="item">
-            <img src="./images/animal/cont6.png" alt="">
+            <img src="./images/animal/cont6.webp" alt="">
             <div>仙鹤</div>
         </div>
     </div>
