--- a/index.html
+++ b/index.html
@@ -40,12 +40,18 @@
     <a-nft
             type='nft' url='trex/trex-image/trex'
             smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
-        <a-entity
-                gltf-model='https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb'
-                scale="5 5 5"
-                position="150 300 -100"
-        >
-        </a-entity>
+        <!--        <a-entity-->
+        <!--                gltf-model='https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb'-->
+        <!--                scale="5 5 5"-->
+        <!--                position="150 300 -100"-->
+        <!--        >-->
+        <!--        </a-entity>-->
+        <a-assets>
+            <img id="my-image" src="images/animal/1.png">
+        </a-assets>
+
+        <!-- Using the asset management system. -->
+        <a-image src="#my-image"></a-image>
     </a-nft>
     <a-entity camera></a-entity>
 </a-scene>
