--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <img id="my-image" src="images/animal/1.png">
     </a-assets>
 
+
     <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
     <a-nft
             type='nft' url='trex/trex-image/trex'
@@ -51,7 +52,9 @@
         <!--        </a-entity>-->
 
         <!-- Using the asset management system. -->
-        <a-image src="#my-image"></a-image>
+        <!--        <a-image src="#my-image"></a-image>-->
+        <a-plane color="#CCC" height="20" width="20"></a-plane>
+        <a-plane src="#ground" height="100" width="100" rotation="-90 0 0"></a-plane>
     </a-nft>
     <a-entity camera></a-entity>
 </a-scene>
