--- a/index.html
+++ b/index.html
@@ -50,11 +50,10 @@
         <!--                position="150 300 -100"-->
         <!--        >-->
         <!--        </a-entity>-->
-
+        <!--        <a-plane color="#CCC" height="20" width="20"></a-plane>-->
+        <!--        <a-plane src="#ground" height="100" width="100" rotation="-90 0 0"></a-plane>-->
         <!-- Using the asset management system. -->
-        <!--        <a-image src="#my-image"></a-image>-->
-        <a-plane color="#CCC" height="20" width="20"></a-plane>
-        <a-plane src="#ground" height="100" width="100" rotation="-90 0 0"></a-plane>
+        <a-image src="#my-image" height="100" width="100" rotation="-90 0 0"></a-image>
     </a-nft>
     <a-entity camera></a-entity>
 </a-scene>
