--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
         <img id="my-image" src="images/animal/1.png">
     </a-assets>
 
+    <a-assets>
+        <img id="my-image1" src="images/animal/2.png">
+    </a-assets>
+
 
     <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
     <a-nft
@@ -53,7 +57,8 @@
         <!--        <a-plane color="#CCC" height="20" width="20"></a-plane>-->
         <!--        <a-plane src="#ground" height="100" width="100" rotation="-90 0 0"></a-plane>-->
         <!-- Using the asset management system. -->
-        <a-image src="#my-image" height="100" width="100" rotation="-90 0 0"></a-image>
+        <a-image src="#my-image" height="500" width="500" rotation="-90 0 0"></a-image>
+        <a-image src="#my-image1" height="500" width="500" rotation="-90 0 0" position="50 150 0></a-image>
     </a-nft>
     <a-entity camera></a-entity>
 </a-scene>
