--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!--        <a-plane src="#ground" height="100" width="100" rotation="-90 0 0"></a-plane>-->
         <!-- Using the asset management system. -->
         <a-image src="#my-image" height="500" width="500" rotation="-90 0 0"></a-image>
-        <a-image src="#my-image1" height="500" width="500" rotation="-90 0 0" position="50 150 0></a-image>
+        <a-image src="#my-image1" height="500" width="500" rotation="-90 0 0" position="50 150 0"></a-image>
     </a-nft>
     <a-entity camera></a-entity>
 </a-scene>
