--- a/index.html
+++ b/index.html
@@ -57,8 +57,21 @@
         <!--        <a-plane color="#CCC" height="20" width="20"></a-plane>-->
         <!--        <a-plane src="#ground" height="100" width="100" rotation="-90 0 0"></a-plane>-->
         <!-- Using the asset management system. -->
+        <a-image src="#my-image1" height="500" width="500" rotation="-90 0 0"></a-image>
+    </a-nft>
+    <a-nft
+            type='nft' url='trex/trex-image/trex'
+            smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
+        <!--        <a-entity-->
+        <!--                gltf-model='https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb'-->
+        <!--                scale="5 5 5"-->
+        <!--                position="150 300 -100"-->
+        <!--        >-->
+        <!--        </a-entity>-->
+        <!--        <a-plane color="#CCC" height="20" width="20"></a-plane>-->
+        <!--        <a-plane src="#ground" height="100" width="100" rotation="-90 0 0"></a-plane>-->
+        <!-- Using the asset management system. -->
         <a-image src="#my-image" height="500" width="500" rotation="-90 0 0"></a-image>
-        <a-image src="#my-image1" height="500" width="500" rotation="-90 0 0" position="50 150 0"></a-image>
     </a-nft>
     <a-entity camera></a-entity>
 </a-scene>
