--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
     <script src="script/aframe.min.js"></script>
     <!-- rawgithack development URL -->
-    <script src='script/aframe-ar-nft.js'></script>
+    <!--    <script src='script/aframe-ar-nft.js'></script>-->
+    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
     <script src="script/jquery.js"></script>
     <link rel="stylesheet" href="css/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="./css/index.css">
@@ -17,24 +18,24 @@
     <script src="./script/gesture-detector.js"></script>
     <script src="./script/gesture-handler.js"></script>
 
-    <script>
-        AFRAME.registerComponent('rotation-reader', {
-            /**
-             * We use IIFE (immediately-invoked function expression) to only allocate one
-             * vector or euler and not re-create on every tick to save memory.
-             */
-            tick: (function () {
-                var position = new THREE.Vector3();
-                var quaternion = new THREE.Quaternion();
+    <!--    <script>-->
+    <!--        AFRAME.registerComponent('rotation-reader', {-->
+    <!--            /**-->
+    <!--             * We use IIFE (immediately-invoked function expression) to only allocate one-->
+    <!--             * vector or euler and not re-create on every tick to save memory.-->
+    <!--             */-->
+    <!--            tick: (function () {-->
+    <!--                var position = new THREE.Vector3();-->
+    <!--                var quaternion = new THREE.Quaternion();-->
 
-                return function () {
-                    this.el.object3D.getWorldPosition(position);
-                    this.el.object3D.getWorldQuaternion(quaternion);
-                    // position and rotation now contain vector and quaternion in world space.
-                };
-            })()
-        });
-    </script>
+    <!--                return function () {-->
+    <!--                    this.el.object3D.getWorldPosition(position);-->
+    <!--                    this.el.object3D.getWorldQuaternion(quaternion);-->
+    <!--                    // position and rotation now contain vector and quaternion in world space.-->
+    <!--                };-->
+    <!--            })()-->
+    <!--        });-->
+    <!--    </script>-->
 
     <script>
         $(function () {
@@ -84,32 +85,211 @@
 </nav>
 
 <!-- 加载动画效果 -->
-<div class="arjs-loader">
-    <div>
-        <!-- Loading, please wait...-->
-        <span style="--i: 1">l</span>
-        <span style="--i: 2">o</span>
-        <span style="--i: 3">a</span>
-        <span style="--i: 4">d</span>
-        <span style="--i: 5">i</span>
-        <span style="--i: 6">n</span>
-        <span style="--i: 7">g</span>
-        <span style="--i: 8">.</span>
-        <span style="--i: 9">.</span>
-        <span style="--i: 10">.</span>
-    </div>
-</div>
+<!--<div class="arjs-loader">-->
+<!--    <div>-->
+<!--        &lt;!&ndash; Loading, please wait...&ndash;&gt;-->
+<!--        <span style="&#45;&#45;i: 1">l</span>-->
+<!--        <span style="&#45;&#45;i: 2">o</span>-->
+<!--        <span style="&#45;&#45;i: 3">a</span>-->
+<!--        <span style="&#45;&#45;i: 4">d</span>-->
+<!--        <span style="&#45;&#45;i: 5">i</span>-->
+<!--        <span style="&#45;&#45;i: 6">n</span>-->
+<!--        <span style="&#45;&#45;i: 7">g</span>-->
+<!--        <span style="&#45;&#45;i: 8">.</span>-->
+<!--        <span style="&#45;&#45;i: 9">.</span>-->
+<!--        <span style="&#45;&#45;i: 10">.</span>-->
+<!--    </div>-->
+<!--</div>-->
 
 <!-- 图像追踪 -->
-<a-scene
-        arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'
-        embedded
-        renderer="logarithmicDepthBuffer: true;"
-        vr-mode-ui="enabled: false;"
-        gesture-detector
-        id="scene"
->
-    <!-- 展示图片 -->
+<!--<a-scene-->
+<!--        arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'-->
+<!--        embedded-->
+<!--        renderer="logarithmicDepthBuffer: true;"-->
+<!--        vr-mode-ui="enabled: false;"-->
+<!--        gesture-detector-->
+<!--        id="scene"-->
+<!--&gt;-->
+<!--    &lt;!&ndash; 展示图片 &ndash;&gt;-->
+<!--    <a-assets>-->
+<!--        <img id="a1" src="images/animal/1.png">-->
+<!--    </a-assets>-->
+
+<!--    <a-assets>-->
+<!--        <img id="a2" src="images/animal/2.png">-->
+<!--    </a-assets>-->
+
+<!--    <a-assets>-->
+<!--        <img id="a3" src="images/animal/3.png">-->
+<!--    </a-assets>-->
+
+<!--    <a-assets>-->
+<!--        <img id="a4" src="images/animal/4.png">-->
+<!--    </a-assets>-->
+
+<!--    <a-assets>-->
+<!--        <img id="a5" src="images/animal/5.png">-->
+<!--    </a-assets>-->
+
+<!--    &lt;!&ndash; use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) &ndash;&gt;-->
+<!--    <a-nft-->
+<!--            type="nft"-->
+<!--            url="nft-mark/nft1/nft1"-->
+<!--            smooth="true"-->
+<!--            smoothCount="10"-->
+<!--            smoothTolerance="0.01"-->
+<!--            smoothThreshold="5"-->
+<!--            raycaster="objects: .clickable"-->
+<!--            emitevents="true"-->
+<!--            cursor="fuse: false; rayOrigin: mouse;"-->
+<!--    >-->
+<!--        &lt;!&ndash;        <a-entity&ndash;&gt;-->
+<!--        &lt;!&ndash;                gltf-model='https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb'&ndash;&gt;-->
+<!--        &lt;!&ndash;                scale="5 5 5"&ndash;&gt;-->
+<!--        &lt;!&ndash;                position="50 150 0"&ndash;&gt;-->
+<!--        &lt;!&ndash;                class="clickable"&ndash;&gt;-->
+<!--        &lt;!&ndash;                gesture-handler="minScale: 0.25; maxScale: 10"&ndash;&gt;-->
+<!--        &lt;!&ndash;        >&ndash;&gt;-->
+<!--        &lt;!&ndash;        </a-entity>&ndash;&gt;-->
+<!--        <a-image-->
+<!--                src="#a1"-->
+<!--                height="500"-->
+<!--                width="500"-->
+<!--                rotation="-90 0 0"-->
+<!--                class="clickable"-->
+<!--                gesture-handler="minScale: 0.25; maxScale: 10">-->
+<!--        </a-image>-->
+<!--    </a-nft>-->
+
+<!--    <a-nft-->
+<!--            type="nft"-->
+<!--            url="trex/trex-image/trex"-->
+<!--            smooth="true"-->
+<!--            smoothCount="10"-->
+<!--            smoothTolerance="0.01"-->
+<!--            smoothThreshold="5"-->
+<!--            raycaster="objects: .clickable"-->
+<!--            emitevents="true"-->
+<!--            cursor="fuse: false; rayOrigin: mouse;"-->
+<!--    >-->
+<!--        <a-image-->
+<!--                src="#a2"-->
+<!--                height="500"-->
+<!--                width="500"-->
+<!--                rotation="-90 0 0"-->
+<!--                class="clickable"-->
+<!--                gesture-handler="minScale: 0.25; maxScale: 10">-->
+<!--        </a-image>-->
+<!--    </a-nft>-->
+
+<!--    <a-nft-->
+<!--            type="nft"-->
+<!--            url="nft-mark/nft2/nft2"-->
+<!--            smooth="true"-->
+<!--            smoothCount="10"-->
+<!--            smoothTolerance="0.01"-->
+<!--            smoothThreshold="5"-->
+<!--            raycaster="objects: .clickable"-->
+<!--            emitevents="true"-->
+<!--            cursor="fuse: false; rayOrigin: mouse;"-->
+<!--    >-->
+<!--        <a-image-->
+<!--                src="#a3"-->
+<!--                height="500"-->
+<!--                width="500"-->
+<!--                rotation="-90 0 0"-->
+<!--                class="clickable"-->
+<!--                gesture-handler="minScale: 0.25; maxScale: 10">-->
+<!--        </a-image>-->
+<!--    </a-nft>-->
+
+<!--    <a-nft-->
+<!--            type="nft"-->
+<!--            url="nft-mark/nft3/nft3"-->
+<!--            smooth="true"-->
+<!--            smoothCount="10"-->
+<!--            smoothTolerance="0.01"-->
+<!--            smoothThreshold="5"-->
+<!--            raycaster="objects: .clickable"-->
+<!--            emitevents="true"-->
+<!--            cursor="fuse: false; rayOrigin: mouse;"-->
+<!--    >-->
+<!--        <a-image-->
+<!--                src="#a4"-->
+<!--                height="500"-->
+<!--                width="500"-->
+<!--                rotation="-90 0 0"-->
+<!--                class="clickable"-->
+<!--                gesture-handler="minScale: 0.25; maxScale: 10">-->
+<!--        </a-image>-->
+<!--    </a-nft>-->
+
+<!--    <a-nft-->
+<!--            type="nft"-->
+<!--            url="nft-mark/nft4/nft4"-->
+<!--            smooth="true"-->
+<!--            smoothCount="10"-->
+<!--            smoothTolerance="0.01"-->
+<!--            smoothThreshold="5"-->
+<!--            raycaster="objects: .clickable"-->
+<!--            emitevents="true"-->
+<!--            cursor="fuse: false; rayOrigin: mouse;"-->
+<!--    >-->
+<!--        <a-image-->
+<!--                src="#a5"-->
+<!--                height="500"-->
+<!--                width="500"-->
+<!--                rotation="-90 0 0"-->
+<!--                class="clickable"-->
+<!--                gesture-handler="minScale: 0.25; maxScale: 10">-->
+<!--        </a-image>-->
+<!--    </a-nft>-->
+
+<!--    <a-nft-->
+<!--            type="nft"-->
+<!--            url="nft-mark/nft5/nft5"-->
+<!--            smooth="true"-->
+<!--            smoothCount="10"-->
+<!--            smoothTolerance="0.01"-->
+<!--            smoothThreshold="5"-->
+<!--            raycaster="objects: .clickable"-->
+<!--            emitevents="true"-->
+<!--            cursor="fuse: false; rayOrigin: mouse;"-->
+<!--    >-->
+<!--        <a-image-->
+<!--                src="#a5"-->
+<!--                height="500"-->
+<!--                width="500"-->
+<!--                rotation="-90 0 0"-->
+<!--                class="clickable"-->
+<!--                gesture-handler="minScale: 0.25; maxScale: 10">-->
+<!--        </a-image>-->
+<!--    </a-nft>-->
+
+<!--    <a-nft-->
+<!--            type="nft"-->
+<!--            url="nft-mark/nft6/nft6"-->
+<!--            smooth="true"-->
+<!--            smoothCount="10"-->
+<!--            smoothTolerance="0.01"-->
+<!--            smoothThreshold="5"-->
+<!--            raycaster="objects: .clickable"-->
+<!--            emitevents="true"-->
+<!--            cursor="fuse: false; rayOrigin: mouse;"-->
+<!--    >-->
+<!--        <a-image-->
+<!--                src="#a4"-->
+<!--                height="500"-->
+<!--                width="500"-->
+<!--                rotation="-90 0 0"-->
+<!--                class="clickable"-->
+<!--                gesture-handler="minScale: 0.25; maxScale: 10">-->
+<!--        </a-image>-->
+<!--    </a-nft>-->
+<!--    <a-entity camera></a-entity>-->
+<!--</a-scene>-->
+
+<a-scene embedded arjs>
     <a-assets>
         <img id="a1" src="images/animal/1.png">
     </a-assets>
@@ -130,161 +310,104 @@
         <img id="a5" src="images/animal/5.png">
     </a-assets>
 
-    <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
-    <a-nft
-            type="nft"
-            url="nft-mark/nft1/nft1"
-            smooth="true"
-            smoothCount="10"
-            smoothTolerance="0.01"
-            smoothThreshold="5"
-            raycaster="objects: .clickable"
-            emitevents="true"
-            cursor="fuse: false; rayOrigin: mouse;"
-    >
-        <!--        <a-entity-->
-        <!--                gltf-model='https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb'-->
-        <!--                scale="5 5 5"-->
-        <!--                position="50 150 0"-->
-        <!--                class="clickable"-->
-        <!--                gesture-handler="minScale: 0.25; maxScale: 10"-->
-        <!--        >-->
-        <!--        </a-entity>-->
+    <a-marker type="pattern" url="pattern-maker/pattern-1.patt">
         <a-image
                 src="#a1"
-                height="500"
-                width="500"
+                height="1.5"
+                width="1.5"
                 rotation="-90 0 0"
                 class="clickable"
                 gesture-handler="minScale: 0.25; maxScale: 10">
         </a-image>
-    </a-nft>
+    </a-marker>
 
-    <a-nft
-            type="nft"
-            url="trex/trex-image/trex"
-            smooth="true"
-            smoothCount="10"
-            smoothTolerance="0.01"
-            smoothThreshold="5"
-            raycaster="objects: .clickable"
-            emitevents="true"
-            cursor="fuse: false; rayOrigin: mouse;"
-    >
+    <a-marker type="pattern" url="pattern-maker/pattern-2.patt">
         <a-image
                 src="#a2"
-                height="500"
-                width="500"
+                height="1.5"
+                width="1.5"
                 rotation="-90 0 0"
                 class="clickable"
                 gesture-handler="minScale: 0.25; maxScale: 10">
         </a-image>
-    </a-nft>
+    </a-marker>
 
-    <a-nft
-            type="nft"
-            url="nft-mark/nft2/nft2"
-            smooth="true"
-            smoothCount="10"
-            smoothTolerance="0.01"
-            smoothThreshold="5"
-            raycaster="objects: .clickable"
-            emitevents="true"
-            cursor="fuse: false; rayOrigin: mouse;"
-    >
+    <a-marker type="pattern" url="pattern-maker/pattern-3.patt">
         <a-image
                 src="#a3"
-                height="500"
-                width="500"
+                height="1.5"
+                width="1.5"
                 rotation="-90 0 0"
                 class="clickable"
                 gesture-handler="minScale: 0.25; maxScale: 10">
         </a-image>
-    </a-nft>
+    </a-marker>
 
-    <a-nft
-            type="nft"
-            url="nft-mark/nft3/nft3"
-            smooth="true"
-            smoothCount="10"
-            smoothTolerance="0.01"
-            smoothThreshold="5"
-            raycaster="objects: .clickable"
-            emitevents="true"
-            cursor="fuse: false; rayOrigin: mouse;"
-    >
+    <a-marker type="pattern" url="pattern-maker/pattern-4.patt">
         <a-image
                 src="#a4"
-                height="500"
-                width="500"
+                height="1.5"
+                width="1.5"
                 rotation="-90 0 0"
                 class="clickable"
                 gesture-handler="minScale: 0.25; maxScale: 10">
         </a-image>
-    </a-nft>
+    </a-marker>
 
-    <a-nft
-            type="nft"
-            url="nft-mark/nft4/nft4"
-            smooth="true"
-            smoothCount="10"
-            smoothTolerance="0.01"
-            smoothThreshold="5"
-            raycaster="objects: .clickable"
-            emitevents="true"
-            cursor="fuse: false; rayOrigin: mouse;"
-    >
+    <a-marker type="pattern" url="pattern-maker/pattern-5.patt">
         <a-image
                 src="#a5"
-                height="500"
-                width="500"
+                height="1.5"
+                width="1.5"
                 rotation="-90 0 0"
                 class="clickable"
                 gesture-handler="minScale: 0.25; maxScale: 10">
         </a-image>
-    </a-nft>
+    </a-marker>
 
-    <a-nft
-            type="nft"
-            url="nft-mark/nft5/nft5"
-            smooth="true"
-            smoothCount="10"
-            smoothTolerance="0.01"
-            smoothThreshold="5"
-            raycaster="objects: .clickable"
-            emitevents="true"
-            cursor="fuse: false; rayOrigin: mouse;"
-    >
-        <a-image
-                src="#a5"
-                height="500"
-                width="500"
-                rotation="-90 0 0"
-                class="clickable"
-                gesture-handler="minScale: 0.25; maxScale: 10">
-        </a-image>
-    </a-nft>
-
-    <a-nft
-            type="nft"
-            url="nft-mark/nft6/nft6"
-            smooth="true"
-            smoothCount="10"
-            smoothTolerance="0.01"
-            smoothThreshold="5"
-            raycaster="objects: .clickable"
-            emitevents="true"
-            cursor="fuse: false; rayOrigin: mouse;"
-    >
+    <a-marker type="pattern" url="pattern-maker/pattern-6.patt">
         <a-image
                 src="#a4"
-                height="500"
-                width="500"
+                height="1.5"
+                width="1.5"
                 rotation="-90 0 0"
                 class="clickable"
                 gesture-handler="minScale: 0.25; maxScale: 10">
         </a-image>
-    </a-nft>
+    </a-marker>
+
+    <a-marker type="pattern" url="pattern-maker/pattern-7.patt">
+        <a-image
+                src="#a3"
+                height="1.5"
+                width="1.5"
+                rotation="-90 0 0"
+                class="clickable"
+                gesture-handler="minScale: 0.25; maxScale: 10">
+        </a-image>
+    </a-marker>
+
+    <a-marker type="pattern" url="pattern-maker/pattern-8.patt">
+        <a-image
+                src="#a2"
+                height="1.5"
+                width="1.5"
+                rotation="-90 0 0"
+                class="clickable"
+                gesture-handler="minScale: 0.25; maxScale: 10">
+        </a-image>
+    </a-marker>
+
+    <a-marker type="pattern" url="pattern-maker/pattern-9.patt">
+        <a-image
+                src="#a1"
+                height="1.5"
+                width="1.5"
+                rotation="-90 0 0"
+                class="clickable"
+                gesture-handler="minScale: 0.25; maxScale: 10">
+        </a-image>
+    </a-marker>
     <a-entity camera></a-entity>
 </a-scene>
 
