--- a/index_bac.html
+++ b/index_bac.html
@@ -1,78 +1,47 @@
-<script src="https://cdn.jsdelivr.net/gh/aframevr/aframe@1.3.0/dist/aframe-master.min.js"></script>
-
-<style>
-    .arjs-loader {
-        height: 100%;
-        width: 100%;
-        position: absolute;
-        top: 0;
-        left: 0;
-        background-color: rgba(0, 0, 0, 0.8);
-        z-index: 9999;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .arjs-loader div {
-        text-align: center;
-        font-size: 1.25em;
-        color: white;
-    }
-</style>
-
-<!-- rawgithack development URL -->
-<!--<script src='https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js'></script>-->
-<script src='script/aframe-ar-nft.js'></script>
-
-
-<body style='margin : 0px; overflow: hidden;'>
-<!-- minimal loader shown until image descriptors are loaded -->
-<div class="arjs-loader">
-    <div>Loading, please wait...</div>
-</div>
-<a-scene
-        vr-mode-ui='enabled: false;'
-        renderer="logarithmicDepthBuffer: true; precision: medium;"
-        embedded arjs='trackingMethod: best; sourceType: webcam; debugUIEnabled: false;'>
+<!DOCTYPE html>
+<html>
+<script src="https://aframe.io/releases/1.3.0/aframe.min.js"></script>
+<!-- we import arjs version without NFT but with marker + location based support -->
+<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+<body style="margin : 0px; overflow: hidden;">
+<a-scene embedded arjs>
     <a-assets>
-        <img id="my-image" src="images/animal/1.png">
+        <img id="a1" src="images/animal/1.png">
     </a-assets>
 
     <a-assets>
-        <img id="my-image1" src="images/animal/2.png">
+        <img id="a2" src="images/animal/2.png">
     </a-assets>
 
+    <a-assets>
+        <img id="a3" src="images/animal/3.png">
+    </a-assets>
 
-    <!-- use rawgithack to retrieve the correct url for nft marker (see 'pinball' below) -->
-    <a-nft
-            type='nft' url='nft-mark/nft1/nft1'
-            smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>
-        <!--        <a-entity-->
-        <!--                gltf-model='https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb'-->
-        <!--                scale="5 5 5"-->
-        <!--                position="150 300 -100"-->
-        <!--        >-->
-        <!--        </a-entity>-->
-        <!--        <a-plane color="#CCC" height="20" width="20"></a-plane>-->
-        <!--        <a-plane src="#ground" height="100" width="100" rotation="-90 0 0"></a-plane>-->
-        <!-- Using the asset management system. -->
-        <a-image src="#my-image1" height="500" width="500" rotation="-90 0 0"></a-image>
-    </a-nft>
-<!--    <a-nft-->
-<!--            type='nft' url='trex/trex-image/trex'-->
-<!--            smooth='true' smoothCount='10' smoothTolerance='0.01' smoothThreshold='5'>-->
-<!--        &lt;!&ndash;        <a-entity&ndash;&gt;-->
-<!--        &lt;!&ndash;                gltf-model='https://cdn.glitch.com/06bd98b4-97ee-4c07-a546-fe39ca205034%2Fbowser.glb'&ndash;&gt;-->
-<!--        &lt;!&ndash;                scale="5 5 5"&ndash;&gt;-->
-<!--        &lt;!&ndash;                position="150 300 -100"&ndash;&gt;-->
-<!--        &lt;!&ndash;        >&ndash;&gt;-->
-<!--        &lt;!&ndash;        </a-entity>&ndash;&gt;-->
-<!--        &lt;!&ndash;        <a-plane color="#CCC" height="20" width="20"></a-plane>&ndash;&gt;-->
-<!--        &lt;!&ndash;        <a-plane src="#ground" height="100" width="100" rotation="-90 0 0"></a-plane>&ndash;&gt;-->
-<!--        &lt;!&ndash; Using the asset management system. &ndash;&gt;-->
-<!--        <a-image src="#my-image" height="500" width="500" rotation="-90 0 0"></a-image>-->
-<!--    </a-nft>-->
+    <a-assets>
+        <img id="a4" src="images/animal/4.png">
+    </a-assets>
+
+    <a-assets>
+        <img id="a5" src="images/animal/5.png">
+    </a-assets>
+
+    <a-marker type="pattern" url="pattern-maker/pattern-5.patt">
+        <!-- we use cors proxy to avoid cross-origin problems ATTENTION! you need to set up your server -->
+        <!--            <a-entity-->
+        <!--            position="0 0 0"-->
+        <!--            scale="0.05 0.05 0.05"-->
+        <!--            gltf-model="https://raw.githack.com/AR-js-org/AR.js/master/aframe/examples/image-tracking/nft/trex/scene.gltf"-->
+        <!--            ></a-entity>-->
+        <a-image
+                src="#a1"
+                height="1.5"
+                width="1.5"
+                rotation="-90 0 0"
+                class="clickable"
+                gesture-handler="minScale: 0.25; maxScale: 10">
+        </a-image>
+    </a-marker>
     <a-entity camera></a-entity>
 </a-scene>
 </body>
+</html>
