--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
         gesture-detector
         id="scene">
     <a-assets>
-        <img id="a1" src="images/animal/1.gif">
+        <img id="a1" src="images/animal/1.png">
     </a-assets>
 
     <a-assets>
